Kaže se aPstrakcija na srpskom

--- a/org/clojure.org
+++ b/org/clojure.org
@@ -77,7 +77,7 @@ system that ensure clean, correct, multithreaded designs.
 
 * Interakcija sa platformom
 
-* Abstrakcije
+* Apstrakcije
 
 ** Multimethods
 
